src/lexical_analysis/tests/snapshots/monkey_interpreter__lexical_analysis__tests__test_lexical_analysis_tokenization_for_keywords_case7.snap
---
source: src/lexical_analysis/tests/mod.rs
expression: "crate::lexical_analysis::LexicalAnalysis::from(code)"

---
Ok(
    [
        Let,
        EndOfFile,
    ],
)
