src/lexical_analysis/tests/snapshots/monkey_interpreter__lexical_analysis__tests__test_lexical_analysis_tokenization_for_special_characters_case4.snap
---
source: src/lexical_analysis/tests/mod.rs
expression: "crate::lexical_analysis::LexicalAnalysis::from(code)"
---
Ok(
    [
        Assign,
        Plus,
        OpeningRoundBracket,
        ClosingRoundBracket,
        OpeningCurlyBracket,
        ClosingCurlyBracket,
        Comma,
        SemiColon,
        EndOfFile,
    ],
)
