src/lexical_analysis/tests/snapshots/monkey_interpreter__lexical_analysis__tests__test_lexical_analysis_tokenization_for_special_multi_characters_case1.snap
---
source: src/lexical_analysis/tests/mod.rs
expression: "crate::lexical_analysis::get_tokens(code)"
---
[
    Integer {
        literal: "2",
    },
    Equals,
    Integer {
        literal: "4",
    },
    EndOfFile,
]
